--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,23 @@
 {
-  "editor.fontFamily": "'Cascadia Code PL', 'Courier New', monospace"
+  "editor.fontFamily": "'Cascadia Code PL', 'Courier New', monospace",
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#1a3c6b",
+    "activityBar.background": "#1a3c6b",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#cd3273",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#1a3c6b",
+    "statusBar.background": "#102542",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#1a3c6b",
+    "statusBarItem.remoteBackground": "#102542",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#102542",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#10254299",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  },
+  "peacock.color": "#102542"
 }
